# perf-tracker

./: .gitignore  Cargo.toml  README.md  metrics_log.txt  metrics_log_2024-07-24.json  metrics_log_2024-07-24.txt  metrics_log_2024-07-25.json  metrics_log_2024-07-25.txt  metrics_log_2024-07-26.json  metrics_log_2024-07-26.txt  metrics_log_2024-07-29.json  metrics_log_2024-07-29.txt  metrics_log_2024-07-30.json  metrics_log_2024-07-30.txt  metrics_log_2024-07-31.json  metrics_log_2024-07-31.txt  metrics_log_2024-08-01.json  metrics_log_2024-08-01.txt  metrics_log_2024-08-02.json  metrics_log_2024-08-02.txt  metrics_log_2024-08-05.json  metrics_log_2024-08-05.txt  metrics_log_2024-08-06.json  metrics_log_2024-08-06.txt  metrics_log_2024-08-07.json  metrics_log_2024-08-07.txt  metrics_log_2024-08-08.json  metrics_log_2024-08-08.txt  metrics_log_2024-08-09.json  metrics_log_2024-08-09.txt  metrics_log_2024-08-11.json  metrics_log_2024-08-11.txt  metrics_log_2024-08-12.json  metrics_log_2024-08-12.txt  metrics_log_2024-08-13.json  metrics_log_2024-08-13.txt  metrics_log_2024-08-14.json  metrics_log_2024-08-14.txt  metrics_log_2024-08-20.json  metrics_log_2024-08-20.txt  (+3 more)
benches/: metrics_benchmark.rs
src/: lighthouse.rs  lighthouse_summary.rs  main.rs  metrics.rs  parse_trace.rs  report.rs  summary.rs  trace.rs  write_summary.rs
