[package]
name = "performance-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sqlite = "0.26.0"
dotenv = "0.15.0"
tokio-postgres = "0.7.11"
