[package]
name = "performance-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
sqlite = "0.26"
uuid = { version = "1", features = ["v4"] }
tokio-postgres = "0.7.11"

# For visualizations if needed later
plotters-bitmap = "0.3.6"

[[bench]]
name = "metrics_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5"
